tests/comp/sem/invalid/assign_to_rvalue-1.mj
class A {

	public static void main(String[] args) {
		/*** 3 + 3 = 3 + 3; ***/
	}

}
